--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,29 +1,52 @@
-apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: recorder
 spec:
+  progressDeadlineSeconds: 600
+  replicas: 1
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: recorder
-  replicas: 1
+      app.kubernetes.io/instance: recorder
+      app.kubernetes.io/name: recorder
   template:
     metadata:
+      creationTimestamp: null
       labels:
-        app: recorder
+        app.kubernetes.io/instance: recorder
+        app.kubernetes.io/name: recorder
     spec:
       containers:
-        - name: recorder
-          image: quay.io/kiddlin/recorder
+          image: quay.io/min_ji_gz_ibm/cloudnative/express-sample-app
+          imagePullPolicy: IfNotPresent
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: 8088
+              scheme: HTTP
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
+          name: recordor
           ports:
-            - containerPort: 80
+            - containerPort: 8088
+              name: http
               protocol: TCP
-          # env:
-          #   - name: NAME
-          #     value: VALUE
-          imagePullPolicy: Always
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 3
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: http
+              scheme: HTTP
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
+          resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
