--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
-          name: recordor
+          name: recorder
           ports:
             - containerPort: 8088
               name: http
