--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - service.yaml
   - route.yaml
 commonLabels:
-  app: squad5-project-recorder
+  app: squad5-api-project-recorder
   app.kubernetes.io/instance: squad5-project-recorder
   app.kubernetes.io/name: squad5-project-recorder
