--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -79,7 +79,7 @@ spec:
          - name: app-namespace
            value: miles-ji-pipeline-from-scratch
          - name: app-name
-           value: squad5-pipeline-from-scratch
+           value: squad5-api
        taskRef:
          kind: Task
          name: kustomize-build
@@ -93,7 +93,7 @@ spec:
          - name: app-namespace
            value: miles-ji-pipeline-from-scratch
          - name: app-name
-           value: squad5-pipeline-from-scratch
+           value: squad5-api
        taskRef:
          kind: Task
          name: test-deploy
